[tool.poetry]
name = "peth"
version = "1.0.10"
description = "An all-in-one Ethereum SDK and command-line tool written in python."
authors = ["Moon <lmy375@139.com>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/lmy375/peth/"
documentation = "https://peth.readthedocs.io/"

[tool.poetry.scripts]
peth = 'peth.cli:main'

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^6.20.0"
requests = "^2.28.0"
pyyaml = "^6.0.0"
py-solc-x = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
